--- a/package.json
+++ b/package.json
@@ -25,17 +25,19 @@
     "exceljs": "^4.4.0",
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.7.0",
+    "mongoose": "^8.6.4",
     "nodemon": "^3.1.7",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
-    "@types/dotenv": "^8.2.0",
+    "@types/dotenv": "^6.1.1",
+    "@types/exceljs": "^0.5.3",
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.7",
-    "@types/node": "^22.7.3",
+    "@types/node": "^22.7.4",
+    "@types/xlsx": "^0.0.35",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2"
   }
