--- a/package.json
+++ b/package.json
@@ -19,28 +19,28 @@
   },
   "homepage": "https://github.com/MENDELBENOR/Simplicity-server#readme",
   "dependencies": {
-    "@types/cookie-parser": "^1.4.7",
-    "bcrypt": "^5.1.1",
-    "cookie-parser": "^1.4.6",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "exceljs": "^4.4.0",
-    "express": "^4.21.0",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.6.4",
-    "nodemon": "^3.1.7",
-    "xlsx": "^0.18.5"
+    "@types/cookie-parser": "1.4.7",
+    "bcrypt": "5.1.1",
+    "cookie-parser": "1.4.6",
+    "cors": "2.8.5",
+    "dotenv": "16.4.5",
+    "exceljs": "4.4.0",
+    "express": "4.21.0",
+    "jsonwebtoken": "9.0.2",
+    "mongoose": "8.6.4",
+    "nodemon": "3.1.7",
+    "xlsx": "0.18.5"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.2",
-    "@types/cors": "^2.8.17",
-    "@types/dotenv": "^6.1.1",
-    "@types/exceljs": "^0.5.3",
-    "@types/express": "^5.0.0",
-    "@types/jsonwebtoken": "^9.0.7",
-    "@types/node": "^22.7.4",
-    "@types/xlsx": "^0.0.35",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.6.2"
+    "@types/bcrypt": "5.0.2",
+    "@types/cors": "2.8.17",
+    "@types/dotenv": "6.1.1",
+    "@types/exceljs": "0.5.3",
+    "@types/express": "5.0.0",
+    "@types/jsonwebtoken": "9.0.7",
+    "@types/node": "22.7.4",
+    "@types/xlsx": "0.0.35",
+    "ts-node": "10.9.2",
+    "typescript": "5.6.2"
   }
 }
