--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "exceljs": "^4.4.0",
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.4",
+    "nodemailer": "^6.9.15",
     "nodemon": "^3.1.7",
     "xlsx": "^0.18.5"
   },
@@ -39,6 +41,7 @@
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.7.4",
+    "@types/nodemailer": "^6.4.16",
     "@types/xlsx": "^0.0.35",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2"
