--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,8 +5,14 @@
     "outDir": "./dist",
     "rootDir": "./src",
     "strict": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "resolveJsonModule": true,
   },
-  "include": ["./src/**.ts", "src/index.ts"],
-  "exclude": ["node_modules"]
+  "include": [
+    "./src/**.ts",
+    "src/index.ts"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
